--- a/game.html
+++ b/game.html
@@ -23,6 +23,36 @@
             return img
         }
 
+        var Ball = function () {
+            var img = imageFromPath('./img/ball.png')
+            var o = {
+                image: img,
+                x: 100,
+                y: 150,
+                speedx: 10,
+                speedy: 10,
+                fired: false,
+            }
+            o.fire = function () {
+                o.fired = true
+            }
+            o.move = function () {
+                if (o.fired) {
+                    console.log('ball move')
+                    if  (o.x < 0 || o.x > 400) {
+                        o.speedx = -o.speedx
+                    }
+                    if  (o.y < 0 || o.y > 300) {
+                        o.speedy = -o.speedy
+                    }
+                    o.x += o.speedx
+                    o.y += o.speedy
+                }
+            }
+            return o
+
+        }
+
         var Paddle = function () {
             var img = imageFromPath('./img/paddle.png')
             var o = {
@@ -102,6 +132,7 @@
             var game = Guagame()
             // 封装  paddle
             var paddle = Paddle()
+            var ball = Ball()
 
             // register actions
             game.registerAction('a', function () {
@@ -110,12 +141,16 @@
             game.registerAction('d', function () {
                 paddle.moveRight()
             })
+            game.registerAction('f', function () {
+                ball.fire()
+            })
 
             game.update = function () {
-
+                ball.move()
             }
             game.draw = function () {
                 game.drawImage(paddle)
+                game.drawImage(ball)
             }
 
         }
@@ -130,7 +165,7 @@
         * 1.封装 Paddle
         * 2.封装 setInterval、canvas
         * 3.分装按键事件
-        *
+        * 4.封装 ball
         * */
     </script>
 
