last commit test

--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>game brick</title>
+    <title>game 1 brick </title>
     <style>
         canvas {
             border: 1px solid gray;
@@ -138,7 +138,6 @@
         }
 
         var __mian = function () {
-
             // 封装 game
             var game = Guagame()
             // 封装  paddle
@@ -181,7 +180,7 @@
         * 2.封装 setInterval、canvas
         * 3.分装按键事件
         * 4.封装 ball
-          5.判断相撞
+          5.判断矩形相撞
         * */
     </script>
 
