--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@
     <script src="block.js"></script>
     <script src="utils.js"></script>
     <script src="level.js"></script>
+    <script src='scene.js'></script>
     <script src='main.js'></script>
 
     <script>
@@ -52,8 +53,9 @@
           有问题要想办法解决，不然就是一件事做了5年而已！！！
           态度不一样， 做出的努力不一样，结果就不一样
 
-          第五集
-          
+          第五集 场景抽象
+          scene.js
+
 
 
         * */
