--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
     <script src="level.js"></script>
     <script src='scene.js'></script>
     <script src='main.js'></script>
+    <script src='scene_end.js'></script>
 
     <script>
         /*
@@ -54,7 +55,10 @@
           态度不一样， 做出的努力不一样，结果就不一样
 
           第五集 场景抽象
-          scene.js
+          创建 scene.js
+          修改 game.js 23：15
+          创建 scene_end.js 43:50
+          ** 跟不上时代发展是会被淘汰掉的，程序也是一样
 
 
 
