--- a/game.html
+++ b/game.html
@@ -71,6 +71,7 @@
           20.整理文件夹 8：26
           21.类 重构 class GuaScene 19：00
               静态方法 static 31:42 
+          22.类重构 GuaGame 37: 10
 
 
         * */
