game block done

--- a/game.html
+++ b/game.html
@@ -72,6 +72,7 @@
           21.类 重构 class GuaScene 19：00
               静态方法 static 31:42 
           22.类重构 GuaGame 37: 10
+          23.只初始化一次Game 55:07
 
 
         * */
